// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h5
  className="Typography__TypographyWrapper-sc-12agh80-0 idFlsp sinoui-typography sinoui-typography--h5"
  color="textPrimary"
  type="h5"
>
  H5
</h5>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 idFlsp sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h2>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 cgDNEB sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 kMcdxg sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 hLVHTK sinoui-typography sinoui-typography--h5"
    color="success"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 bIWfIr sinoui-typography sinoui-typography--h5 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 idFlsp sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 fAwROo sinoui-typography sinoui-typography--h5"
    color="primary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 lkXpED sinoui-typography sinoui-typography--h5"
    color="secondary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 idFlsp sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 gElOlR sinoui-typography sinoui-typography--h5"
    color="textSecondary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 dfOEfh sinoui-typography sinoui-typography--h5"
    color="error"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 eMOZmb sinoui-typography sinoui-typography--h5"
    color="warning"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 hLVHTK sinoui-typography sinoui-typography--h5"
    color="success"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="Typography__TypographyWrapper-sc-12agh80-0 jhdRYr sinoui-typography sinoui-typography--h5"
    color="info"
    type="h5"
  >
    H5
  </h5>,
]
`;
